--- a/.github/workflows/main-tests.yml
+++ b/.github/workflows/main-tests.yml
@@ -1,5 +1,6 @@
 name: Java CI with Maven
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]  # Change this to your specific branch name
   pull_request:
@@ -25,3 +26,20 @@ jobs:
       # 3. Run the tests
       - name: Build and Run Tests
         run: mvn test
+
+
+  qodana:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      checks: write
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
+          fetch-depth: 0  # a full history is required for pull request analysis
+      - name: 'Qodana Scan'
+        uses: JetBrains/qodana-action@v2025.3
+        env:
+          QODANA_TOKEN: ${{ secrets.QODANA_KEY }}
