Tilføjet Azure database forbindelse (husk at download Azure CLI og Azure Tools inde i IDEA)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=matador
+spring.datasource.url=jdbc:sqlserver://nelsondatabase.database.windows.net:1433;databaseName=NelsonDB;encrypt=true;authentication=ActiveDirectoryDefault
+spring.datasource.username=daol0002@stud.ek.dk
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=dbo
